--- a/Jungle-Academy/portfolio4-admin_design/css/header.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.css
@@ -131,17 +131,16 @@ i {
 }
 
 #main-tnb .tnb-wrap .search-board {
+  position: relative;
   width: 300px;
   height: 36px;
   margin-left: 40px;
 }
 
 #main-tnb .tnb-wrap .search-board input {
-  display: block;
-  float: left;
-  width: 280px;
+  width: 100%;
   height: 100%;
-  padding-left: 15px;
+  padding: 0px 35px 0px 15px;
 }
 
 #main-tnb .tnb-wrap .search-board input:focus {
@@ -153,11 +152,11 @@ i {
 }
 
 #main-tnb .tnb-wrap .search-board a {
+  position: absolute;
+  top: 1px;
+  right: 10px;
   display: block;
   float: left;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
   margin-top: 7px;
 }
 
