--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -108,17 +108,15 @@ i {
     }
   
     .search-board {
+      position: relative;
       width: 300px;
       height: 36px;
       margin-left: 40px;
 
-      //위치랑 다시 지정
       input {
-        display: block;
-        float: left;
-        width: 280px;
+        width: 100%;
         height: 100%;
-        padding-left: 15px;
+        padding: 0px 35px 0px 15px ;
   
         &:focus {
           background: #F4F5F7;
@@ -130,9 +128,11 @@ i {
       }
   
       a {
+        position: absolute;
+        top: 1px;
+        right: 10px;
         display: block;
         float: left;
-        width: fit-content;
         margin-top: 7px;
       }
     }
