--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -5,12 +5,12 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 155px;
 }
 
 #overall article {
   position: relative;
   width: 24.5%;
+  height: 155px;
   background: #27A599;
   padding: 20px;
 }
@@ -179,6 +179,13 @@ section + section {
   font-weight: 400;
 }
 
+#sales-info .sales > div + div {
+  width: 100%;
+  height: 100px;
+  margin-top: 10px;
+  background: url(../img/sales-img/sales-design-img.png) no-repeat left top/contain;
+}
+
 section .table-wrap {
   margin: 0px 20px;
 }
@@ -199,6 +206,17 @@ section .table-wrap table tbody tr td {
 
 section .table-wrap table tbody tr td:first-child, section .table-wrap table tbody tr td:nth-child(3) {
   color: #27A599;
+}
+
+section .table-wrap table tbody tr td:nth-child(2) {
+  max-width: 1px;
+}
+
+section .table-wrap table tbody tr td:nth-child(2) a {
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 section .table-wrap table tbody tr:first-child td {
@@ -402,10 +420,16 @@ section .table-wrap table tbody tr + tr {
   right: 0%;
 }
 
-.joing .weather-today {
+.joing .weather-wrap {
   position: absolute;
   top: 0%;
-  right: 13.5%;
+  right: 0%;
+  height: 100%;
+}
+
+.joing .weather-wrap .weather-today {
+  float: left;
+  width: 65%;
   height: 100%;
   padding: 1.5% 0%;
   background: white;
@@ -413,48 +437,48 @@ section .table-wrap table tbody tr + tr {
   text-align: center;
 }
 
-.joing .weather-today em {
+.joing .weather-wrap .weather-today em {
   font-style: normal;
 }
 
-.joing .weather-today span, .joing .weather-today em {
+.joing .weather-wrap .weather-today span, .joing .weather-wrap .weather-today em {
   display: block;
 }
 
-.joing .weather-today .inline {
+.joing .weather-wrap .weather-today .inline {
   display: inline;
 }
 
-.joing .weather-today h2 {
+.joing .weather-wrap .weather-today h2 {
   padding: 6%;
   font-size: 17px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.joing .weather-today div:first-of-type {
+.joing .weather-wrap .weather-today div:first-of-type {
   padding-top: 10px;
   color: #F36564;
   font-size: 15px;
 }
 
-.joing .weather-today div:first-of-type span, .joing .weather-today div:first-of-type em {
+.joing .weather-wrap .weather-today div:first-of-type span, .joing .weather-wrap .weather-today div:first-of-type em {
   margin-top: 10px;
 }
 
-.joing .weather-today div:first-of-type em {
+.joing .weather-wrap .weather-today div:first-of-type em {
   font-size: 34px;
 }
 
-.joing .weather-today div:first-of-type span:first-child {
+.joing .weather-wrap .weather-today div:first-of-type span:first-child {
   text-transform: capitalize;
 }
 
-.joing .weather-today div:first-of-type span:nth-child(3) {
+.joing .weather-wrap .weather-today div:first-of-type span:nth-child(3) {
   font-size: 13px;
 }
 
-.joing .weather-today div:nth-of-type(2) {
+.joing .weather-wrap .weather-today div:nth-of-type(2) {
   position: relative;
   height: 10%;
   width: 70%;
@@ -462,7 +486,7 @@ section .table-wrap table tbody tr + tr {
   color: rgba(0, 0, 0, 0.5);
 }
 
-.joing .weather-today div:nth-of-type(2) > span {
+.joing .weather-wrap .weather-today div:nth-of-type(2) > span {
   position: absolute;
   top: 0%;
   width: 30%;
@@ -472,23 +496,23 @@ section .table-wrap table tbody tr + tr {
   background-size: cover;
 }
 
-.joing .weather-today div:nth-of-type(2) > span:first-child {
+.joing .weather-wrap .weather-today div:nth-of-type(2) > span:first-child {
   left: 0%;
   height: 100%;
   padding: 0%;
 }
 
-.joing .weather-today div:nth-of-type(2) > span:nth-child(2) {
+.joing .weather-wrap .weather-today div:nth-of-type(2) > span:nth-child(2) {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
 }
 
-.joing .weather-today div:nth-of-type(2) > span:nth-child(3) {
+.joing .weather-wrap .weather-today div:nth-of-type(2) > span:nth-child(3) {
   right: 0%;
 }
 
-.joing .weather-today ul {
+.joing .weather-wrap .weather-today ul {
   width: 95%;
   height: 45%;
   margin: 0 auto;
@@ -498,11 +522,11 @@ section .table-wrap table tbody tr + tr {
   overflow: hidden;
 }
 
-.joing .weather-today ul li + li {
+.joing .weather-wrap .weather-today ul li + li {
   border-left: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.joing .weather-today ul li {
+.joing .weather-wrap .weather-today ul li {
   position: relative;
   float: left;
   width: 20%;
@@ -512,7 +536,7 @@ section .table-wrap table tbody tr + tr {
   color: rgba(0, 0, 0, 0.5);
 }
 
-.joing .weather-today ul li > span, .joing .weather-today ul li > em {
+.joing .weather-wrap .weather-today ul li > span, .joing .weather-wrap .weather-today ul li > em {
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -520,16 +544,16 @@ section .table-wrap table tbody tr + tr {
   font-size: 14px;
 }
 
-.joing .weather-today ul li span:first-of-type {
+.joing .weather-wrap .weather-today ul li span:first-of-type {
   top: 15%;
   font-weight: 400;
 }
 
-.joing .weather-today ul li span:first-of-type span {
+.joing .weather-wrap .weather-today ul li span:first-of-type span {
   margin-top: 5px;
 }
 
-.joing .weather-today ul li span:nth-of-type(2) {
+.joing .weather-wrap .weather-today ul li span:nth-of-type(2) {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -538,54 +562,53 @@ section .table-wrap table tbody tr + tr {
   background-size: 40px;
 }
 
-.joing .weather-today ul li > em {
+.joing .weather-wrap .weather-today ul li > em {
   bottom: 30%;
   color: #F36564;
 }
 
-.joing .weather-weak {
-  position: absolute;
-  top: 0px;
-  right: 0px;
+.joing .weather-wrap .weather-weak {
+  float: right;
+  width: 30%;
   height: 100%;
   padding: 2% 1%;
 }
 
-.joing .weather-weak table {
+.joing .weather-wrap .weather-weak table {
   width: 100%;
   height: 100%;
 }
 
-.joing .weather-weak table tr {
+.joing .weather-wrap .weather-weak table tr {
   height: 5%;
   color: rgba(0, 0, 0, 0.7);
 }
 
-.joing .weather-weak table tr span {
+.joing .weather-wrap .weather-weak table tr span {
   color: rgba(0, 0, 0, 0.7);
   font-weight: normal;
 }
 
-.joing .weather-weak table tr td:first-child {
+.joing .weather-wrap .weather-weak table tr td:first-child {
   text-transform: capitalize;
   font-weight: bold;
   color: #1A1D23;
   font-size: 12px;
 }
 
-.joing .weather-weak table tr .w-icon {
+.joing .weather-wrap .weather-weak table tr .w-icon {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-.joing .weather-weak table tr .w-icon span {
+.joing .weather-wrap .weather-weak table tr .w-icon span {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-.joing .weather-weak table tr .w-deg {
+.joing .weather-wrap .weather-weak table tr .w-deg {
   text-align: right;
   color: #F36564;
   font-weight: bold;
