--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -94,7 +94,7 @@ i {
       margin-left: 31px;
 
       &.notice:after {
-        content: "";
+        content: '';
         display: block;
         background-color: #EF5B5C;
         width: 10px;
@@ -150,7 +150,7 @@ i {
   margin-right: 30px;
 
   &.notice:after {
-    content: "";
+    content: '';
     display: block;
     background-color: #27A498;
     width: 10px;
@@ -159,7 +159,7 @@ i {
     top: auto;
     bottom: 0px;
     right: -3px;
-    border: 2px solid #fff;
+    border: 2px solid #f5f5f5;
     border-radius: 10px;
   }
 }
@@ -285,12 +285,17 @@ i {
 }
 
 //#main-gnb
+
 #main-gnb {
   position: fixed;
   top: 61px;
   width: 50px;
   height: 100%;
   background: #27A599;
+
+  &.open {
+    display: block;
+  }
 
   #main-gnb-header {
     display: none;
@@ -316,7 +321,7 @@ i {
 
         i {
           font-size: 15px;
-          color: #fff;
+          color: #f5f5f5;
         }
 
         span {
@@ -345,7 +350,7 @@ i {
 
             &:hover {
               background: #1C2026;
-              color: #fff;
+              color: #f5f5f5;
             }
           }
         }
@@ -380,7 +385,7 @@ header {
           left: 15px;
           transform: translateY(-50%);
           float: left;
-          color: #fff;
+          color: #f5f5f5;
           font-size: 25px;
           font-weight: lighter;
           
@@ -426,14 +431,14 @@ header {
                 left: 50%;
                 transform: translate(-50%, -50%);
                 font-size: 15px;
-                color: #fff;
+                color: #f5f5f5;
               }
             }
           }
 
           .mail {
             &.notice:after {
-              content: "";
+              content: '';
               display: block;
               position: absolute;
               top: 5px;
@@ -476,7 +481,7 @@ header {
 
           h2 {
             float: left;
-            color: #fff;
+            color: #f5f5f5;
             text-transform: capitalize;
             font-weight: normal;
             font-size: 20px;
@@ -519,7 +524,7 @@ header {
 
             &:hover {
               span, i{
-                color: #fff;
+                color: #f5f5f5;
               }
             }
 
@@ -569,6 +574,7 @@ main {
   top: 61px;
   left: 50px;
   right: 0px;
+  height: 100%;
   padding: 30px;
   background: #E5E9EC;
   z-index: 1;
