--- a/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.scss
@@ -34,6 +34,7 @@ header.open + main {
 .list-search {
   position: relative;
   height: 30%;
+  padding-bottom: 50px;
 
   > a {
     position: absolute;
@@ -46,6 +47,13 @@ header.open + main {
     font-size: 11px;
     font-weight: bold;
     background: #E9595A;
+    border-radius: 0px 0px 3px 3px; 
+    box-shadow: 0px 4px #ab3c3c;
+
+    &:hover {
+      top: 2px;
+      box-shadow: 0 2px #ab3c3c;
+    }
   }
 
   h2 {
@@ -97,6 +105,10 @@ header.open + main {
   }
 
   button {
+    position: absolute;
+    left: 50%;
+    bottom: 2px;
+    transform: translateX(-50%);
     display: block;
     margin: 3% auto 0%;
     width: 6%;
@@ -104,6 +116,13 @@ header.open + main {
     font-size: 12px;
     background: #888;
     color: #fff;
+    border-radius: 0px 0px 3px 3px; 
+    box-shadow: 0px 4px rgb(34, 34, 34);
+
+    &:hover {
+      bottom: 0px;
+      box-shadow: 0 2px rgb(34, 34, 34);
+    }
   }
 }
 
@@ -119,13 +138,6 @@ header.open + main {
     tr {
       &:hover {
         background: #f5f5f5;
-      }
-
-      a {
-        &:hover {
-          text-decoration: underline;
-          text-decoration-color: #E9595A;
-        }
       }
     }
 
@@ -175,12 +187,27 @@ header.open + main {
         font-size: 13px;
   
         a {
+          position: relative;
           display: inline-block;
           color: #777;
           padding: 5px;
-  
+
           &:hover {
-            text-decoration: underline;
+            color: #333;
+          }
+
+          &:hover:after {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: block;
+            content: '';
+            width: 16px;
+            height: 16px;
+            border-radius: 8px;
+            background-color: #999;
+            opacity: 0.3;
           }
         }
       }
