--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -1,3 +1,7 @@
+body.index {
+  background: #E5E9EC;
+}
+
 #overall {
   display: flex;
   justify-content: space-between;
@@ -284,7 +288,7 @@ section {
   .joing-group {
     position: relative;
     overflow: hidden;
-    background: #fff;
+
 
     &:hover {
       img {
@@ -299,11 +303,11 @@ section {
     }
 
     img {
-      //img 밑에 공간이 남음?
       width: 100%;
       transition: transform .4s, opacity .4s, -webkit-filter .4s;
       //opacity: 1;
       -webkit-filter: contrast(100%);
+      vertical-align: top;
     }
 
     div:nth-of-type(2) {
@@ -364,11 +368,6 @@ section {
       }
     }
   }
-
-  // p {
-  //   display: inline-block;
-  //   width: 30%;
-  // }
 
   .joing-board {
     position: absolute;
