--- a/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.css
@@ -2,6 +2,11 @@ body {
   color: #2D3138;
 }
 
+header {
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
 main {
   min-height: calc(100vh - 61px);
   padding: 2% 12%;
@@ -26,13 +31,13 @@ header.open + main {
   padding: 2% 8%;
 }
 
-.list-search {
+.list-horizon {
   position: relative;
   height: 30%;
   padding-bottom: 50px;
 }
 
-.list-search > a {
+.list-horizon > a {
   position: absolute;
   right: 0%;
   display: block;
@@ -48,55 +53,56 @@ header.open + main {
           box-shadow: 0px 4px #ab3c3c;
 }
 
-.list-search > a:hover {
+.list-horizon > a:hover {
   top: 2px;
   -webkit-box-shadow: 0 2px #ab3c3c;
           box-shadow: 0 2px #ab3c3c;
 }
 
-.list-search h2 {
+.list-horizon h2 {
   padding: 3% 0.8% 0.8%;
   font-size: 15px;
   font-weight: bold;
 }
 
-.list-search table {
+.list-horizon table {
   font-size: 12px;
 }
 
-.list-search table td {
+.list-horizon table td {
   padding-left: 14px;
   height: 35px;
 }
 
-.list-search table td label + label {
+.list-horizon table td label + label {
   margin-left: 10px;
 }
 
-.list-search table td input[type="text"] {
+.list-horizon table td input[type="text"] {
   width: calc(100% - 110px);
 }
 
-.list-search table td input[type="text"], .list-search table td select {
-  border: 1px solid gray;
-  border-radius: 0;
+.list-horizon table td input[type="text"], .list-horizon table td select {
   height: 20px;
+  border: 1px solid #b8b9bb;
+  border-radius: 0;
+  color: #222;
   line-height: 13px;
 }
 
-.list-search table td i {
+.list-horizon table td i {
   font-size: 12px;
 }
 
-.list-search table td:nth-child(2n-1) {
+.list-horizon table td:nth-child(2n-1) {
   background: #F4F5F7;
 }
 
-.list-search table td.no-bg {
+.list-horizon table td.no-bg {
   background: none;
 }
 
-.list-search button {
+.list-horizon button {
   position: absolute;
   left: 50%;
   bottom: 2px;
@@ -114,7 +120,7 @@ header.open + main {
           box-shadow: 0px 4px #222222;
 }
 
-.list-search button:hover {
+.list-horizon button:hover {
   bottom: 0px;
   -webkit-box-shadow: 0 2px #222222;
           box-shadow: 0 2px #222222;
@@ -220,5 +226,124 @@ header.open + main {
 
 .list-board .page-control > a img {
   width: 100%;
+}
+
+.write .list-horizon h2 {
+  padding: 1% 0.8% 0.8%;
+}
+
+.write .list-horizon table td {
+  height: 0px;
+  padding: 13px;
+}
+
+.write input[type="file"] {
+  margin-top: 10px;
+}
+
+.write .file-preview li, .write .image-preview li {
+  border: 1px solid #d2d2d3;
+  border-radius: 3px;
+  color: #444;
+}
+
+.write .file-preview li i, .write .image-preview li i {
+  margin: 0px 4px;
+}
+
+.write .file-preview li em, .write .image-preview li em {
+  padding-left: 5px;
+  font-style: normal;
+}
+
+.write .file-preview li + li, .write .image-preview li + li {
+  margin-top: 5px;
+}
+
+.write .file-preview li {
+  width: 95%;
+  padding: 7px;
+}
+
+.write .image-preview li {
+  display: inline-block;
+  width: 200px;
+  height: 210px;
+  margin-right: 10px;
+  padding: 5px;
+  background: #FAFCFE;
+  vertical-align: bottom;
+}
+
+.write .image-preview li div {
+  position: relative;
+  height: 140px;
+  margin-bottom: 5px;
+  border: 1px solid #d2d2d3;
+  border-radius: 3px;
+}
+
+.write .image-preview li div img, .write .image-preview li div i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.write .image-preview li div img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.write .image-preview li div i {
+  font-size: 70px;
+}
+
+.write .image-preview .attached-image-fix {
+  position: relative;
+}
+
+.d-green {
+  color: #00BCA4;
+}
+
+.d-yellow {
+  color: #ffcc00;
+}
+
+.file-size {
+  display: block;
+  width: 55px;
+  height: 18px;
+  line-height: 18px;
+  margin: 10px 4px;
+  color: #f5f5f5;
+  background: #00BCA4;
+  border: 1px solid #009783;
+  border-radius: 3px;
+  text-align: center;
+}
+
+.file-delete {
+  top: auto;
+  left: auto;
+  right: 10px;
+  bottom: 10px;
+  -webkit-transform: none;
+          transform: none;
+  margin: 0%;
+  width: auto;
+  line-height: 1;
+  background: none;
+  border-radius: 0px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: inherit;
+}
+
+.file-delete i {
+  font-size: 20px;
+  color: red;
 }
 /*# sourceMappingURL=subpage-list.css.map */
